--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="row">
             <div style="position: fixed; z-index: 1; top: 15%; right: 29%; display:none" id="divCompleted">
-                <img src="giphy.gif" style="display:block;cursor:pointer" onclick="location.reload()" />
+                <img src="img/giphy.gif" style="display:block;cursor:pointer" onclick="location.reload()" />
             </div>
         </div>
         <div class="row" id="root">
