--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     </div>
     <!--Sound Notifications -->
     <audio controls="controls" id="sndCorrect" style="display:none">
-        <source src="http://mg.trustjo.net/correct.mp3" />
+        <source src="audio/correct.mp3" />
     </audio>
     <audio controls="controls" id="sndCompleted" style="display:none">
-        <source src="http://mg.trustjo.net/WUHOHO.mp3" />
+        <source src="audio/WUHOHO.mp3" />
     </audio>
     <!--Sound Notifications -->
     <script src="script.js"></script>
